# rag

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_career_vault.py  0001_initial_khudarchive.py  0002_add_match_requests.py  0003_add_selection_events.py  0004_pgvector_embedding.py  0005_add_experience_facets.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/core/: codes.py  config.py  errors.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/models/: experience.py  experience_chunk.py  experience_question.py  experience_source.py  match_request.py  selection_event.py  source_document.py  user.py
apps/backend/app/repositories/: chunk_repository.py  experience_repository.py  match_repository.py  question_repository.py  selection_repository.py  source_document_repository.py
apps/backend/app/schemas/: common.py  (+12 more)
apps/backend/eval/: README.md  corpus.jsonl  golden.jsonl  run_eval.py
apps/backend/tests/: conftest.py  test_adaptive_topk.py  test_chunking.py  test_context_packet.py  test_cover_letters.py  test_experience_extraction_prompt.py  test_experience_facets.py  test_match_api.py  test_metadata_boost.py  test_notion_import_service.py  test_pdf_document_api.py  test_pipeline_service.py  test_preference.py  test_query_decomposition.py  test_reranking.py  test_resume_api.py  test_retrieval.py  test_scoring.py  test_selection.py  test_text_cleaning.py
(+99 files in other folders)
